# social-media-feeds

./: .gitignore
qualtrics-feed-component/: README.md  analyze_responses.py  example-posts.json  feed-component.js  plot_response.py  test.html
twitter-scraper/: .env.example  README.md  accounts.py  collect_replies.py  collect_search.py  export_csv.py  extract_cookies.py  imap_fetch.py  requirements.txt  setup_accounts.py  tweet_serializer.py
yourfeed-platform/: .gitignore  README.md  docker-compose.yml
yourfeed-platform/backend/: Dockerfile  pyproject.toml
yourfeed-platform/backend/alembic/: env.py
yourfeed-platform/backend/app/: config.py  db.py  main.py  schemas.py  seed.py
yourfeed-platform/backend/app/algorithms/: __init__.py  base.py
yourfeed-platform/backend/app/models/: __init__.py  event.py  participant.py  post.py  study.py
yourfeed-platform/backend/app/routers/: events.py  export.py  participants.py  studies.py
yourfeed-platform/backend/app/services/: condition_assigner.py
yourfeed-platform/frontend/: index.html  package.json
yourfeed-platform/frontend/src/: main.tsx
yourfeed-platform/frontend/src/lib/: api.ts  dwellTracker.ts
yourfeed-platform/frontend/src/pages/: Dashboard.tsx  Feed.tsx
yourfeed-platform/frontend/src/styles/: feed.css  global.css
